tests/compile/derive-invalid-attribute.stderr
error: Unexpected attribute: ignored
 --> $DIR/derive-invalid-attribute.rs:8:13
  |
8 |     #[merge(ignored)]
  |             ^^^^^^^
